added redis for caching

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button type="submit">Get Matches</button>
         </form>
 
-        <div id="matchesList"></div> <!-- Where match titles will be displayed -->
+        <div id="matchesList"></div> 
 
         <div id="matchDetails" style="display: none;">
             <h2>Match Details</h2>
